force-app/main/default/objects/Property__c/fields/Close_to_Shopping__c.field-meta.xml
<CustomField>
    <fullName>Close_to_Shopping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close to Shopping?</label>
    <type>Checkbox</type>
</CustomField>