force-app/main/default/objects/Property__c/fields/Current_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Current_Tenant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Current Tenant</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Tenant does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Tenant</value>
        </filterItems>
        <infoMessage>Please select the current tenant for this property.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property</relationshipLabel>
    <relationshipName>Property</relationshipName>
    <type>Lookup</type>
</CustomField>