force-app/main/default/objects/Property__c/fields/Family_Friendly_Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Family_Friendly_Neighborhood__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family-Friendly Neighborhood?</label>
    <type>Checkbox</type>
</CustomField>