force-app/main/default/objects/Property__c/fields/Landlord__c.field-meta.xml
<CustomField>
    <fullName>Landlord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>