force-app/main/default/objects/Property__c/fields/Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Amount__c</fullName>
    <label>Rent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>