force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Status__c</columns>
    <columns>Rent_Amount__c</columns>
    <columns>Landlord__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>