force-app/main/default/objects/Property__c/listViews/Available_Properties.listView-meta.xml
<ListView>
    <fullName>Available_Properties</fullName>
    <columns>NAME</columns>
    <columns>Property_Type__c</columns>
    <columns>Bedrooms__c</columns>
    <columns>Bathrooms__c</columns>
    <columns>Square_Footage__c</columns>
    <columns>Rent_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property_Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Available Properties</label>
</ListView>