force-app/main/default/objects/Property__c/listViews/Occupied_Properties.listView-meta.xml
<ListView>
    <fullName>Occupied_Properties</fullName>
    <columns>NAME</columns>
    <columns>Property_Type__c</columns>
    <columns>Bedrooms__c</columns>
    <columns>Bathrooms__c</columns>
    <columns>Square_Footage__c</columns>
    <columns>Rent_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property_Status__c</field>
        <operation>equals</operation>
        <value>Occupied</value>
    </filters>
    <label>Occupied Properties</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>